instructions.Instructions.scala.error
Compilation error:
Instructions:1: error: not found: value brushdown
brushdown() 
^